None condition for card Text Block

--- a/templates/block/block--text-block.html.twig
+++ b/templates/block/block--text-block.html.twig
@@ -33,7 +33,7 @@
 {% elseif blockContent.field_text_block_background.value == '5' %}
 	{% set blockBackground = 'text-block-white' %}
 {% else %}
-	{% set blockBackground = 'text-block-white' %}
+	{% set blockBackground = 'text-block-none' %}
 {% endif %}
 
 {% if blockContent.field_text_block_style.value  == '1' %}
