--- a/css/block/expandable-content.css
+++ b/css/block/expandable-content.css
@@ -3,35 +3,29 @@
  *
 */
 
-.vertical-tab-content {
+.ucb-expandable-content .vertical-tab-content {
 	width: 100%;
 }
 
-.nav-tabs,
-.vertical-tabs {
+.ucb-expandable-content .horizontal-tab-accordion .nav-tabs,
+.ucb-expandable-content .vertical-tab-accordion .vertical-tabs {
 	display: none;
 }
 
-.accordion-flush :last-child {
-	border-bottom: 0;
-}
-
-.accordion-button {
+.ucb-expandable-content .accordion-button, .ucb-expandable-content .accordion-button:not(.collapsed), .ucb-expandable-content .accordion-button:focus {
 	color: #0277bd;
 	font-size: 18px;
 	font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-
-.accordion-button:not(.collapsed), .accordion-button:focus {
 	background-color: transparent;
 	box-shadow: none;
+
 }
 
-.accordion-button:not(.collapsed)::after, .accordion-button::after {
+.ucb-expandable-content .accordion-button:not(.collapsed)::after, .ucb-expandable-content .accordion-button::after {
 	background: none;
 }
 
-.accordion-button::before {
+.ucb-expandable-content .accordion-button::before {
 	flex-shrink: 0;
 	margin-right: 0.25em;
 	content: "\f0fe";
@@ -41,84 +35,72 @@
 	color: #0277bd;
 }
 
-.accordion-button:not(.collapsed)::before {
+.ucb-expandable-content .accordion-button:not(.collapsed)::before {
 	content: "\f146";
 }
 
-.accordion-button:hover {
+.ucb-expandable-content .accordion-button:hover {
 	color: #b71c1c;
 }
 
-.accordion-button:hover::before {
+.ucb-expandable-content .accordion-button:hover::before {
 	color: #b71c1c;
 }
 
-.accordion-button, .accordion-body {
+.ucb-expandable-content .accordion-button, .ucb-expandable-content .accordion-body {
 	padding-left: 0;
 	padding-right: 0;
 }
 
-.ucb-bootstrap-layout-section-overlay-dark .accordion-button {
+.ucb-bootstrap-layout-section-dark .ucb-expandable-content .accordion-button {
 	color: var(--ucb-gold);
 }
 
-.ucb-bootstrap-layout-section-overlay-dark .accordion-button::before {
+.ucb-bootstrap-layout-section-dark .ucb-expandable-content .accordion-button::before {
 	color: var(--ucb-gold);
 }
 
-.ucb-bootstrap-layout-section-overlay-dark .accordion-button:hover {
+.ucb-bootstrap-layout-section-dark .ucb-expandable-content .accordion-button:hover {
 	color: var(--ucb-white);
 }
 
-.ucb-bootstrap-layout-section-overlay-dark .accordion-button:hover::before {
+.ucb-bootstrap-layout-section-dark .ucb-expandable-content .accordion-button:hover::before {
 	color: var(--ucb-white);
 }
 
-
-.ucb-bootstrap-layout-section-overlay-dark .accordion-body {
+.ucb-bootstrap-layout-section-dark .ucb-expandable-content .horizontal-tab-link.nav-link{
 	color: var(--ucb-white);
 }
 
-.ucb-accordion-content .accordion-item {
-	background-color: initial;
-}
-
-.ucb-accordion-content .accordion-button {
-	background-color: initial;
-}
-
-.ucb-bootstrap-layout-section-dark .horizontal-tab-link.nav-link{
-	color: var(--ucb-white);
-}
-
-.ucb-bootstrap-layout-section-light .horizontal-tab-link.nav-link{
+.ucb-bootstrap-layout-section-light .ucb-expandable-content .horizontal-tab-link.nav-link{
 	color: var(--ucb-black);
 }
 
-.horizontal-tab-link.nav-link.active {
+.ucb-expandable-content .horizontal-tab-link.nav-link.active {
 	color: var(--ucb-white);
 	background-color: var(--ucb-black);
 	border-radius: 0;
 }
 
-.horizontal-tab-link.nav-link {
+.ucb-bootstrap-layout-section-dark .ucb-expandable-content .horizontal-tab-link.nav-link.active {
+	color: var(--ucb-black);
+	background-color: var(--ucb-white);
+}
+
+.ucb-expandable-content .horizontal-tab-link.nav-link {
 	font-weight: bold;
 	line-height: 1.2em;
 	padding: 8px 15px;
 }
 
-.horizontal-tab-link.nav-link,
-.horizontal-tab-link.nav-link:hover,
-.horizontal-tab-link.nav-link:focus {
+.ucb-expandable-content .horizontal-tab-link.nav-link,
+.ucb-expandable-content .horizontal-tab-link.nav-link:hover,
+.ucb-expandable-content .horizontal-tab-link.nav-link:focus {
 	border: none;
 	border-radius: 0;
 }
 
-.horizontal-tab-content {
-	padding-top: 1em;
-}
-
-.vertical-tab-link.nav-link {
+.ucb-expandable-content .vertical-tab-link.nav-link {
 	color: #6a6a6a;
 	background-color: #e7e7e7;
 	font-weight: bold;
@@ -126,62 +108,91 @@
 	border-radius: 0;
 }
 
-.vertical-tab-link.nav-link.active {
-	color: #202020;
-	background-color: #fff;
+.ucb-bootstrap-layout-section-dark .ucb-expandable-content .vertical-tab-link.nav-link {
+	color: #cccccc;
+	background-color: rgba(128, 128, 128, 0.333);
 }
 
-.vertical-tab-content .accordion-item {
-	padding-top: 20px;
+.ucb-expandable-content .vertical-tab-link.nav-link.active {
+	color: var(--ucb-black);
+	background-color: var(--ucb-white);
+}
+
+.ucb-bootstrap-layout-section-dark .ucb-expandable-content .vertical-tab-link.nav-link.active {
+	color: var(--ucb-white);
+	background-color: var(--ucb-black);
+}
+
+.ucb-expandable-content .accordian-content .collapse:not(.show), .ucb-expandable-content .horizontal-tab-content .collapse:not(.show), .ucb-expandable-content .vertical-tab-content .collapse:not(.show) {
+	display: none;
+}
+
+.ucb-expandable-content .accordian-content .collapse.show, .ucb-expandable-content .horizontal-tab-content .collapse.show, .ucb-expandable-content .vertical-tab-content .collapse.show, 
+.ucb-expandable-content .accordian-content .collapsing, .ucb-expandable-content .horizontal-tab-content .collapsing, .ucb-expandable-content .vertical-tab-content .collapsing {
+	display: block;
+}
+
+.ucb-expandable-content .accordion-item {
+	color: inherit;
+	background-color: inherit;
+	border-bottom: 1px solid rgba(128, 128, 128, 0.333);
 }
 
 @media (min-width: 768px) {
-	.nav-tabs,
-	.vertical-tabs {
+	.ucb-expandable-content .horizontal-tab-accordion .nav-tabs,
+	.ucb-expandable-content .vertical-tab-accordion .vertical-tabs {
 		display: flex;
 	}
 
-	.nav-tabs {
+	.ucb-expandable-content .horizontal-tab-accordion .nav-tabs {
 		border-bottom: 2px solid var(--ucb-black);
 	}
 
-	.tab-pane .border {
+	.ucb-bootstrap-layout-section-dark .ucb-expandable-content .horizontal-tab-accordion .nav-tabs  {
+		border-bottom: 2px solid var(--ucb-white);
+	}
+
+	.ucb-expandable-content .horizontal-tab-content .accordion-header, .ucb-expandable-content .vertical-tab-content .accordion-header,
+	.ucb-expandable-content .horizontal-tab-content .collapse.show, .ucb-expandable-content .vertical-tab-content .collapse.show {
 		display: none;
 	}
 
-	.tab-pane .collapse {
+	.ucb-expandable-content .horizontal-tab-content .collapse.active, .ucb-expandable-content .vertical-tab-content .collapse.active {
 		display: block;
 	}
 
-	.vertical-tabs {
+	.ucb-expandable-content .vertical-tab-accordion .vertical-tabs {
 		width: 100%;
 		max-width: 25%;
 		background-color: #f2f2f2;
 	}
 
-	.vertical-tab-content {
+	.ucb-bootstrap-layout-section-dark .ucb-expandable-content .vertical-tab-accordion .vertical-tabs {
+		background-color: rgba(128, 128, 128, 0.333);
+	}
+
+	.ucb-expandable-content .vertical-tab-accordion .vertical-tab-content {
 		display: flex;
 		max-width: 75%;
 		padding: 0 1em;
 	}
 
-	.horizontal-accordion-tab,
-	.vertical-accordion-tab {
+	.ucb-expandable-content .horizontal-tab-accordion .horizontal-accordion-tab,
+	.ucb-expandable-content .vertical-tab-accordion .vertical-accordion-tab {
 		display: none;
 	}
 
-	.tab-content .accordion-item {
-		border: none;
+	.ucb-expandable-content .horizontal-tab-content .accordion-item, .ucb-expandable-content .vertical-tab-content .accordion-item {
+		border-bottom: none;
 	}
 
-	.vertical-tab-accordion {
+	.ucb-expandable-content .horizontal-tab-content .accordion-body, .ucb-expandable-content .vertical-tab-content .accordion-body {
+		padding-top: 20px;
+		padding-bottom: 0;
+	}
+
+	.ucb-expandable-content .vertical-tab-accordion {
 		background: none;
 		border: 1px solid rgba(128, 128, 128, 0.333);
-	}
-}
-
-@media (max-width: 767px) {
-	.tab-content > .tab-pane {
-		display: block;
 	}
 }
