--- a/css/block/video-reveal.css
+++ b/css/block/video-reveal.css
@@ -1,4 +1,4 @@
-.ucb-vid-reveal {
+/* .ucb-vid-reveal {
   position: relative;
 }
 
@@ -78,4 +78,33 @@ span.ucb-vid-reveal-icon {
   .ucb-video-reveal-controls {
     font-size: 1.25em;
   }
+} */
+.ucb-hero-unit-video-controls-wrapper{
+  display: flex;
+  width: 100%; 
+  height: 100%; 
+  flex-direction: row; 
+  background-color: blue; 
+  overflow: hidden;
+}
+
+.ucb-hero-unit-video-player-wrapper > iframe{
+  margin-top: 0px !important;
+  margin-left: 0px;
+}
+.ucb-video-reveal-image{
+display: none;
+}
+
+.ucb-hero-unit-video-wrapper{
+  min-height: 700px;
+  width: 100%;
+  max-height: 100%;
+}
+
+.ucb-hero-unit-video-control-button{
+  position: relative;
+  top:50%;
+  left:50%;
+  color: red;
 }
